change catalina_opts